--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta name ="viewport" content ="width=device-width, initial-scale=1.0"> <!--  Isso fornece instruções ao navegador sobre como controlar as dimensões e o dimensionamento da página.-->
         <meta name="description" content="Produtos personalizados da Criativa Produtos">
         <meta name="author" content="Amanda de Jesus, Diogo Zaccaron, Ezequiel Eduardo Marcon">
-        <link rel="stylesheet" href="../css/styleprincipal.css">
+        <link rel="stylesheet" href="css/styleprincipal.css">
         <link href="https://fonts.googleapis.com/css2?family=Playwrite+NG+Modern:wght@100..400&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Italianno&family=Ovo&family=Parisienne&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
         <script src="../js/scriptprincipal.js" defer></script>
