--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
         <link rel="stylesheet" href="css/styleprincipal.css">
         <link href="https://fonts.googleapis.com/css2?family=Playwrite+NG+Modern:wght@100..400&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Italianno&family=Ovo&family=Parisienne&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
-        <script src="../js/scriptprincipal.js" defer></script>
+        <script src="js/scriptprincipal.js" defer></script>
     </head>
     <body> <!--Corpo da Pagina-->
         <header class="Cabeçalho"> <!--Cabecalho da Pagina-->
             <figure>
-                <img src="../img/header2.png">
+                <img src="img/header2.png">
             </figure>  
             <button id="btnModo"></button>
         </header>
@@ -31,7 +31,7 @@
         <main> <!--Conteudo Principal da Pagina-->
             <section class="carrossel" id="meuCarrossel"> <!--Talvez um Carrossel???-->
                 <figure class="slide">
-                    <img src="../img/Carrosel1.png" alt="Slide 1"  id="Moldura">
+                    <img src="img/Carrosel1.png" alt="Slide 1"  id="Moldura">
                 </figure>               
                 <nav class="botoes">
                     <button id="previSlide"class="botao1"></button> <!-- Usar Script para botao / Ver no JavaScript -->
@@ -42,21 +42,21 @@
             <section class="Catalogo"> <!--Secao de Produtos-->
                 <article class="artigo_produto"> 
                     <figure class="produto">
-                        <img src="../img/1.png" alt="Copo Long Drink">
+                        <img src="img/1.png" alt="Copo Long Drink">
                     </figure>
                     <figcaption>Copo Long Drink</figcaption>
                     <figcaption>R$4,50</figcaption>
                 </article>
                 <article class="artigo_produto"> 
                     <figure class="produto">
-                        <img src="../img/2.png" alt="Suporte c/ 4 xícaras">
+                        <img src="img/2.png" alt="Suporte c/ 4 xícaras">
                     </figure>
                     <figcaption>Suporte c/ 4 xícaras</figcaption>
                     <figcaption>R$130,00</figcaption>
                 </article>
                 <article class="artigo_produto"> 
                     <figure class="produto">
-                        <img src="../img/3.png" alt="Caneca de chopp alumínio 700ml">  
+                        <img src="img/3.png" alt="Caneca de chopp alumínio 700ml">  
                     </figure>
                     <figcaption>Caneca de chopp alumínio 700ml</figcaption>
                     <figcaption>R$25,00</figcaption>
