--- a/index.html
+++ b/index.html
@@ -63,84 +63,84 @@
                 </article>
                 <article class="artigo_produto"> 
                     <figure class="produto">
-                        <img src="../img/4.png" alt="Caneca de chopp 500ml"> 
+                        <img src="img/4.png" alt="Caneca de chopp 500ml"> 
                     </figure>
                     <figcaption>Caneca de chopp 500ml</figcaption>
                     <figcaption>R$5,00</figcaption>
                 </article>
                 <article class="artigo_produto"> 
                     <figure class="produto">
-                        <img src="../img/5.png" alt="Chaveiro em PU"> 
+                        <img src="img/5.png" alt="Chaveiro em PU"> 
                     </figure>
                     <figcaption>Chaveiro em PU</figcaption>
                     <figcaption>R$19,00</figcaption>
                 </article>
                 <article class="artigo_produto"> 
                     <figure class="produto">
-                        <img src="../img/6.png" alt="Acqua Bio tradicional"> 
+                        <img src="img/6.png" alt="Acqua Bio tradicional"> 
                     </figure>
                     <figcaption>Acqua Bio tradicional</figcaption>
                     <figcaption>R$15,00</figcaption>
                 </article>
                 <article class="artigo_produto"> 
                     <figure class="produto">
-                       <img src="../img/7.png" alt="Squeeze alumínio c/ bico Nike"> 
+                       <img src="img/7.png" alt="Squeeze alumínio c/ bico Nike"> 
                     </figure>
                     <figcaption>Squeeze alumínio c/ bico Nike</figcaption>
                     <figcaption>R$48,00</figcaption>
                 </article>
                 <article class="artigo_produto"> 
                     <figure class="produto">
-                        <img src="../img/8.png" alt="Toalha lavabo">
+                        <img src="img/8.png" alt="Toalha lavabo">
                     </figure>
                     <figcaption>Toalha lavabo</figcaption>
                     <figcaption>R$6,00</figcaption>
                 </article>
                 <article class="artigo_produto">
                     <figure class="produto">
-                        <img src="../img/9.png" alt="Caneca cerâmica alça dourada">
+                        <img src="img/9.png" alt="Caneca cerâmica alça dourada">
                     </figure>
                     <figcaption>Caneca cerâmica alça dourada</figcaption>
                     <figcaption>R$45,00</figcaption>
                 </article>
                 <article class="artigo_produto"> 
                     <figure class="produto">
-                        <img src="../img/10.png" alt="Agenda Permanente">
+                        <img src="img/10.png" alt="Agenda Permanente">
                     </figure>
                     <figcaption>Agenda Permanente</figcaption>
                     <figcaption>R$60,00</figcaption>
                 </article>
                 <article class="artigo_produto"> 
                     <figure class="produto">
-                        <img src="../img/11.png" alt="Copo caldereta">
+                        <img src="img/11.png" alt="Copo caldereta">
                     </figure>
                     <figcaption>Copo caldereta</figcaption>
                     <figcaption>R$6,00</figcaption>
                 </article>
                 <article class="artigo_produto"> 
                     <figure class="produto">
-                        <img src="../img/12.png" alt="Xícara com pires e colher">
+                        <img src="img/12.png" alt="Xícara com pires e colher">
                     </figure>
                     <figcaption>Xícara c/ pires e colher</figcaption>
                     <figcaption>R$38,00</figcaption>
                 </article>
                 <article class="artigo_produto"> 
                     <figure class="produto">
-                       <img src="../img/13.png" alt="Copo de café">
+                       <img src="img/13.png" alt="Copo de café">
                     </figure>
                     <figcaption>Copo de café</figcaption>
                     <figcaption>R$10,00</figcaption>
                 </article>
                 <article class="artigo_produto"> 
                     <figure class="produto">
-                        <img src="../img/14.png" alt="Taça Chandon">
+                        <img src="img/14.png" alt="Taça Chandon">
                     </figure>
                     <figcaption>Taça Chandon</figcaption>
                     <figcaption>R$6,00</figcaption>
                 </article>
                 <article class="artigo_produto"> 
                     <figure class="produto">
-                        <img src="../img/15.png" alt="Canecas de Chopp">
+                        <img src="img/15.png" alt="Canecas de Chopp">
                     </figure>
                     <figcaption>Taça Gin bicolor</figcaption>
                     <figcaption>R$16,00</figcaption>
