--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
     <head>
         <title>Criativa Personalizados</title>
-        <link rel="shortcut icon" type="imagex/png" sizes="48x48" href="../img/Icone_pagina.png">
+        <link rel="shortcut icon" type="imagex/png" sizes="48x48" href="img/Icone_pagina.png">
         <meta charset="UTF-8"> <!-- Atributo especifica a codificação de caracteres do documento HTML. -->
         <meta name ="keywords" content ="Produtos, Personalizados, Produtos Personalizados"> <!--  Define palavras chave -->
         <meta name ="viewport" content ="width=device-width, initial-scale=1.0"> <!--  Isso fornece instruções ao navegador sobre como controlar as dimensões e o dimensionamento da página.-->
