--- a/index.html
+++ b/index.html
@@ -162,11 +162,11 @@
                     <strong>Localização</strong>
                     <p>Rua Mampituba, nº 438, Sala 04, Vila São João - Torres/RS, CEP: 95560-000</p>
                 </li>
-                <li>
+               <li>
                     <strong>Contato</strong> <br>
-                    <a href="https://api.whatsapp.com/send/?phone=5551989923523&text&type=phone_number&app_absent=0" target="_blank">WhatsApp</a>
-                    <a href="https://www.instagram.com/eucurtocriativa/" target="_blank">Instagram</a>
-                    <a href="https://www.facebook.com/copospersonalizadoscriativa?locale=pt_BR" target="_blank">Facebook</a>
+                    <a href="https://api.whatsapp.com/send/?phone=5551989923523&text&type=phone_number&app_absent=0" target="_blank"><img src="img/Whatsapp.png"></a>
+                    <a href="https://www.instagram.com/eucurtocriativa/" target="_blank"><img src="img/Instagram.png"></a>
+                    <a href="https://www.facebook.com/copospersonalizadoscriativa?locale=pt_BR" target="_blank"><img src="img/Facebook.png"></a>
                 </li>
             </ul>
         </footer>
